@@ -4,6 +4,7 @@ Revision history for VCS::Lite::Repository
         - change file dates changed to meet W3CDTF standards.
         - new maintainer, Barbie, due to the untimely death of Ivor Williams.
         - License updated to Artistic License v2.0.
+        - reworked Makefile.PL for clarity.
 
 0.09    2004-12-12T11:01:25
         - Fix failing tests. Don't autovivity $parent-{transactions} in 
